--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
 <div id="header"></div>
     <div class="container"></div>
     <nav>
-        
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Contact</a></li>
+
+        </ul>
     </nav>
 </body>
 </html>
