styling of tabs

--- a/index.html
+++ b/index.html
@@ -20,7 +20,38 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
+        <div class="header-text">
+            <p> Aspiring UI/UX Design and Data Analyst </p>
+            <h1> Hi, I'm <span>Marlen</span><br>Melchor </h1>
+        </div>
+    </div>
+
+<!--About tab/section-->
+<div id="about">
+    <div class="container">
+        <div class="row">
+            <div class="about-col-1">
+                <img src="images/user.png">
+            </div>
+            <div class="about-col-2">
+                <h1 class="sub-title">About Me</h1>
+                <p>xxxxFiller text temporary</p>
+                <div class="tab-titles">
+                    <p class="tab-links active-link">Skills</p>
+                    <p class="tab-links">Experience</p>
+                    <p class="tab-links">Education</p>
+                </div>
+                <div class="tab-contents">
+                    <ul>
+                        <li><span>UI/UX</span><br>Designing Web/App Interfaces/Development</li>
+                        <li><span>Analytics</span><br> Data Analytics</li>
+                        <li><span>Database Management</span><br> Database Recreations</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
+
 </body>
 </html>
