--- a/index.html
+++ b/index.html
@@ -92,7 +92,60 @@
         </div>
     </div>
 </div>
-</body>
+<div id="projects">
+    <div class="container">
+        <h1 class="sub-title"> My Work</h1>
+        <div class="work-list">
+            <div class="work">
+                <img src="images/work-1.png">
+                <div class="layer">
+                    <h3>Filler Text</h3>
+                    <p>Filler textFiller textFiller textFiller textFiller textFiller textFiller text</p>
+                </div>
+            </div>
+            <div class="work">
+                <img src="images/work-2.png">
+                <div class="layer">
+                    <h3>Filler Text</h3>
+                    <p>Filler textFiller textFiller textFiller textFiller textFiller textFiller text</p>
+                </div>
+            </div>
+            <div class="work">
+                <img src="images/work-3.png">
+                <div class="layer">
+                    <h3>Filler Text</h3>
+                    <p>Filler textFiller textFiller textFiller textFiller textFiller textFiller text</p>
+                </div>
+            </div>
+        </div>
+        <a href="#" class="btn">See More</a>
+    </div>
+</div>
+<!--Contact -->
+<div id="contact">
+    <div class="container">
+        <div class="row">
+            <div class="contact-left">
+                <h1 class="sub-title">Contact Me</h1>
+                <p><i class="fa-solid fa-paper-plane"></i>melchormarlen@gmail.com</p>
+                <p><i class="fa-solid fa-phone"></i>872.777.6784</p>
+                <div class="social-icons">
+                    <a href="https://www.linkedin.com/in/mmelchor/"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://www.github.com/melchormarlen/"><i class="fa-brands fa-square-github"></i></a>
+                </div>
+                <a href="images/my-cv.pdf" download class="btn btn2">Download Resume</a>
+            </div>
+            <div class="contact-right"> </div>
+                <form>
+                    <input type="text" name="Name" placeholder="Your Name" required>
+                    <input type="text" name="Email" placeholder="Your Email" required>
+                    <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+                    <button type="submit" class="btn btn2">Submit</button>
+                </form>
+        </div>
+    </div>
+</div>
+</body> <!--Double Check this -->
 <script>
     var tablinks = document.getElementsByClassName("tab-links");
     var tabcontents = document.getElementsByClassName("tab-contents");
