--- a/index.html
+++ b/index.html
@@ -13,20 +13,23 @@
     <div class="container">
         <nav>
             <img src="images/logo.png" class="logo">
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Projects</a></li>
-                <li><a href="#">Contact</a></li>
+            <ul id="sidebar">
+                <li><a href="#header">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <i class="fa-solid fa-x" onclick="closemenu()"></i>
             </ul>
+
+            <i class="fa-solid fa-bars" onclick="openmenu()"></i>
         </nav>
         <div class="header-text">
             <p> Aspiring UI/UX Design and Data Analyst </p>
-            <h1> Hi, I'm <span>Marlen</span><br>Melchor </h1>
+            <h1> Hi, I'm <span class="hover-effect">Marlen</span><br>Melchor </h1>
         </div>
     </div>
-
+</div>
 <!--About tab/section-->
 <div id="about">
     <div class="container">
@@ -59,7 +62,7 @@
                 </div>
                 <div class="tab-contents" id="education">
                     <ul>
-                        <li><span>2022-2026</span><br> Bachelor of Science in Computer Science </li>
+                        <li><span>2022-2026</span><br> Bachelor of Science in Computer Science<br>Specialization in Data Science </li>
                     </ul>
                 </div>
             </div>
@@ -135,17 +138,20 @@
                 </div>
                 <a href="images/my-cv.pdf" download class="btn btn2">Download Resume</a>
             </div>
-            <div class="contact-right"> </div>
-                <form>
+            <div class="contact-right">
+                <form name="submit-to-google-sheet">
                     <input type="text" name="Name" placeholder="Your Name" required>
                     <input type="text" name="Email" placeholder="Your Email" required>
                     <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
                     <button type="submit" class="btn btn2">Submit</button>
                 </form>
+                <span id="msg"></span>
+            </div>
         </div>
     </div>
+    
 </div>
-</body> <!--Double Check this -->
+
 <script>
     var tablinks = document.getElementsByClassName("tab-links");
     var tabcontents = document.getElementsByClassName("tab-contents");
@@ -160,4 +166,31 @@
         document.getElementById(tabname).classList.add("active-tab");
     }
 </script>
+<script>
+    var sidemenu = document.getElementById("sidebar");
+    function openmenu(){
+        sidemenu.style.right = "0";
+    }
+    function closemenu(){
+        sidemenu.style.right= "-200px"; 
+    }
+
+</script>
+<script>
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbwV_NpSOOItKRnMrRxRvNsAkmHY0zp7rWKIUXwhUZXTpQhxOAGRrMSlhfc772ZDFLHi/exec'
+    const form = document.forms['submit-to-google-sheet']
+    const msg = document.getElementById("msg")
+    form.addEventListener('submit', e => {
+      e.preventDefault()
+      fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+        .then(response => {
+            msg.innerHTML= "Message sent successfully !"
+            setTimeout(function(){
+                msg.innerHTML = ""
+            },5000)
+        })
+        .catch(error => console.error('Error!', error.message))
+    })
+  </script>
+</body>
 </html>
